--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Tests for @import in CSS",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./test.mjs"
   },
   "repository": {
     "type": "git",
@@ -17,8 +17,8 @@
   },
   "homepage": "https://github.com/romainmenke/css-import-tests#readme",
   "dependencies": {
-    "puppeteer": "^20.8.2",
     "postcss": "^8.4.26",
-    "postcss-import": "^15.1.0"
+    "postcss-import": "^15.1.0",
+    "puppeteer": "^20.8.2"
   }
 }
