--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "postcss": "^8.4.26",
     "postcss-import": "^15.1.0",
     "puppeteer": "^20.8.2"
+  },
+  "devDependencies": {
+    "@csstools/css-tokenizer": "^2.2.0",
+    "@csstools/css-parser-algorithms": "^2.3.1"
   }
 }
