--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   },
   "homepage": "https://github.com/romainmenke/css-import-tests#readme",
   "dependencies": {
-    "esbuild": "^0.18.13",
-    "lightningcss": "^1.21.5",
+    "esbuild": "*",
+    "lightningcss": "*",
     "postcss": "^8.4.26",
-    "postcss-import": "^15.1.0",
+    "postcss-import": "*",
     "puppeteer": "^20.8.2"
   },
   "devDependencies": {
