--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/romainmenke/css-import-tests#readme",
   "dependencies": {
-    "esbuild": "*",
+    "esbuild": "0.18.13",
     "lightningcss": "*",
     "postcss": "^8.4.26",
     "postcss-import": "*",
