--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/romainmenke/css-import-tests.git"
   },
   "author": "Romain Menke",
-  "license": "MIT",
+  "license": "MIT-0",
   "bugs": {
     "url": "https://github.com/romainmenke/css-import-tests/issues"
   },
